[tool.poetry]
name = "prueba"
version = "0.1.0"
description = "poetry-crewai-streamlit cloud"
authors = ["inteligenciartificialgenerativa.online"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
crewai = { version = "^0.36.0", extras = ["tools"] }
langchain-community = "0.2.6"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
